--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3694,7 +3694,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_beirut_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_beirut_stability_factor|=2%+]"
  ottoman_beirut_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_beirut_war_support_factor|=2%+]"
  ottoman_beirut_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_beirut_political_power_factor|=0%+]"
- ottoman_beirut_vilayet_553_yes:0 "\n§Y[553.GetName]§!:[TUR_arab_population_553]"
+ ottoman_beirut_vilayet_553_yes:0 "\n§Y[553.GetName]§!:[TUR_arab_population_553][TUR_autonomy_553]"
  ottoman_beirut_vilayet_852_yes:0 "\n§Y[852.GetName]§!:[TUR_arab_population_852]"
  ottoman_beirut_vilayet_1021_yes:0 "\n§Y[1021.GetName]§!:[TUR_arab_population_1021]"
  ottoman_beirut_vilayet_858_yes:0 "\n§Y[858.GetName]§!:[TUR_arab_population_858]"
@@ -3775,8 +3775,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_hejaz_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_hejaz_stability_factor|=2%+]"
  ottoman_hejaz_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_hejaz_war_support_factor|=2%+]"
  ottoman_hejaz_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_hejaz_political_power_factor|=0%+]"
- ottoman_hejaz_vilayet_679_yes:0 "\n§Y[679.GetName]§!:[TUR_arab_population_679]"
- ottoman_hejaz_vilayet_878_yes:0 "\n§Y[878.GetName]§!:[TUR_arab_population_878]"
+ ottoman_hejaz_vilayet_679_yes:0 "\n§Y[679.GetName]§!:[TUR_arab_population_679][TUR_autonomy_679]"
+ ottoman_hejaz_vilayet_878_yes:0 "\n§Y[878.GetName]§!:[TUR_arab_population_878][TUR_autonomy_878]"
 
  TUR_yemen_vilayet:0 "Yemen Vilayet"
  TUR_yemen_vilayet_desc:0 "[TUR_yemen_vilayet_desc]"
@@ -3798,7 +3798,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_yemen_vilayet_930_yes:0 "\n§Y[930.GetName]§!:[TUR_arab_population_930]"
  ottoman_yemen_vilayet_929_yes:0 "\n§Y[929.GetName]§!:[TUR_arab_population_929]"
 
-  TUR_al_jawf_vilayet:0 "Al-Jawf Vilayet"
+ TUR_al_jawf_vilayet:0 "Al-Jawf Vilayet"
  TUR_al_jawf_vilayet_desc:0 "[TUR_al_jawf_vilayet_desc]"
  TUR_al_jawf_vilayet_desc_yes:0 "§W[ottoman_al_jawf_vilayet_centralization_desc][ottoman_al_jawf_vilayet_separatist_sentiments_desc]§!"
  ottoman_al_jawf_vilayet_tt_blocked:0 "§YAl-Jawf Vilayet§![ottoman_al_jawf_vilayet_centralization][ottoman_al_jawf_vilayet_separatist_sentiments]"
@@ -5210,6 +5210,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_azerbaijani_population_939_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_939_azerbaijani_population_stability_factor|=2%+]"
  TUR_azerbaijani_population_939_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_939_azerbaijani_population_war_support_factor|=2%+]"
  TUR_azerbaijani_population_939_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_939_azerbaijani_population_war_support_factor|=0%+]"
+ TUR_autonomy_551_autonomy_lebanon:0 "\n£sabotaged_resource_texticon §YAutonomous Mutasarrifate§!:\n£stability_texticon  Stability: §G+2.00%§!\n£war_support_modifiericons_texticon  War Support: Stability: §G+2.00%§!"
+ TUR_autonomy_551_autonomy:0 "\n£sabotaged_resource_texticon §YAutonomous Vilayet§!:\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_autonomy_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: Stability: [?ROOT.TUR_ottoman_autonomy_factor|=2%+]"
+ TUR_autonomy_551_semi_autonomy:0 "\n£sabotaged_resource_texticon §YSemi-Autonomous Vilayet§!:\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_semi_autonomy_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: Stability: [?ROOT.TUR_ottoman_semi_autonomy_factor|=2%+]"
 
  TRS_arab_uprising_dummy:0 "Arab Uprising"
  TRS_arab_uprising_dummy_desc:0 "Our reforms in Syria have been vastly unpopular. As the opposition grew, it reached a point where it can trigger an all-out rebellion."
