major bug fixed

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2781,6 +2781,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_dismiss_yakub_cemil_desc:0 "[ROOT.TUR_yakub_cemil.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_yakub_cemil_tt:0 "Modify §YCommittee of Union and Progress§! by\n£garrison_texticon  Required Garrisons: §R+5%§!\n£operatives_root_out_resistance_texticon  Root Out Resistance mission effects: §R-5%§!\n£attack_militia_texticon  Militia Attack: §R-2.50%§!\n£defence_militia_texticon  Militia Defense: §R-2.50%§!\n\n"
 
+ TUR_is_committee_government_of_ROOT:0 "Is §YCommittee Government§! of §Y[ROOT.GetNameDef]§!"
  TUR_get_opda_name:0 "[TUR_get_opda_name]"
  TUR_get_opda_name_opda:0 "Ottoman Public Debt Administration"
  TUR_get_opda_name_opd:0 "Ottoman Public Debt"
@@ -5210,9 +5211,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_azerbaijani_population_939_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_939_azerbaijani_population_stability_factor|=2%+]"
  TUR_azerbaijani_population_939_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_939_azerbaijani_population_war_support_factor|=2%+]"
  TUR_azerbaijani_population_939_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_939_azerbaijani_population_war_support_factor|=0%+]"
- TUR_autonomy_551_autonomy_lebanon:0 "\n£sabotaged_resource_texticon §YAutonomous Mutasarrifate§!:\n£stability_texticon  Stability: §G+2.00%§!\n£war_support_modifiericons_texticon  War Support: Stability: §G+2.00%§!"
- TUR_autonomy_551_autonomy:0 "\n£sabotaged_resource_texticon §YAutonomous Vilayet§!:\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_autonomy_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: Stability: [?ROOT.TUR_ottoman_autonomy_factor|=2%+]"
- TUR_autonomy_551_semi_autonomy:0 "\n£sabotaged_resource_texticon §YSemi-Autonomous Vilayet§!:\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_semi_autonomy_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: Stability: [?ROOT.TUR_ottoman_semi_autonomy_factor|=2%+]"
+ TUR_autonomy_autonomy_lebanon:0 "\n£sabotaged_resource_texticon §YAutonomous Mutasarrifate§!:\n£stability_texticon  Stability: §G+2.00%§!\n£war_support_modifiericons_texticon  War Support: Stability: §G+2.00%§!"
+ TUR_autonomy_autonomy:0 "\n£sabotaged_resource_texticon §YAutonomous Vilayet§!:\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_autonomy_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: Stability: [?ROOT.TUR_ottoman_autonomy_factor|=2%+]"
+ TUR_autonomy_semi_autonomy:0 "\n£sabotaged_resource_texticon §YSemi-Autonomous Vilayet§!:\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_semi_autonomy_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: Stability: [?ROOT.TUR_ottoman_semi_autonomy_factor|=2%+]"
 
  TRS_arab_uprising_dummy:0 "Arab Uprising"
  TRS_arab_uprising_dummy_desc:0 "Our reforms in Syria have been vastly unpopular. As the opposition grew, it reached a point where it can trigger an all-out rebellion."
