more bugs fixed

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2978,7 +2978,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_manastir_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_manastir_stability_factor|=2%+]"
  ottoman_manastir_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_manastir_war_support_factor|=2%+]"
  ottoman_manastir_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_manastir_political_power_factor|=0%+]"
- ottoman_manastir_vilayet_203_yes:0 "\n§Y[203.GetName]§!:[TUR_south_slavic_population_203][TUR_albanian_population_203][TUR_turkish_population_203]"
+ ottoman_manastir_vilayet_203_yes:0 "\n§Y[203.GetName]§!:[TUR_south_slavic_population_203][TUR_albanian_population_203][TUR_turkish_population_203][TUR_autonomy_203]"
  ottoman_manastir_vilayet_731_yes:0 "\n§Y[731.GetName]§!:[TUR_greek_population_731][TUR_turkish_population_731]"
  ottoman_manastir_vilayet_826_yes:0 "\n§Y[826.GetName]§!:[TUR_greek_population_826][TUR_turkish_population_826]"
 
@@ -2994,9 +2994,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_yanya_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_yanya_stability_factor|=2%+]"
  ottoman_yanya_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_yanya_war_support_factor|=2%+]"
  ottoman_yanya_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_yanya_political_power_factor|=0%+]"
- ottoman_yanya_vilayet_758_yes:0 "\n§Y[758.GetName]§!:[TUR_greek_population_758][TUR_albanian_population_758]"
- ottoman_yanya_vilayet_803_yes:0 "\n§Y[803.GetName]§!:[TUR_greek_population_803][TUR_albanian_population_803]"
- ottoman_yanya_vilayet_871_yes:0 "\n§Y[871.GetName]§!:[TUR_albanian_population_871]"
+ ottoman_yanya_vilayet_758_yes:0 "\n§Y[758.GetName]§!:[TUR_greek_population_758][TUR_albanian_population_758][TUR_autonomy_758]"
+ ottoman_yanya_vilayet_803_yes:0 "\n§Y[803.GetName]§!:[TUR_greek_population_803][TUR_albanian_population_803][TUR_autonomy_803]"
+ ottoman_yanya_vilayet_871_yes:0 "\n§Y[871.GetName]§!:[TUR_albanian_population_871][TUR_autonomy_871]"
  ottoman_yanya_vilayet_187_yes:0 "\n§Y[187.GetName]§!:[TUR_greek_population_187]"
 
  TUR_iskodra_vilayet:0 "İşkodra Vilayet"
@@ -3011,8 +3011,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_iskodra_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_iskodra_stability_factor|=2%+]"
  ottoman_iskodra_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_iskodra_war_support_factor|=2%+]"
  ottoman_iskodra_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_iskodra_political_power_factor|=0%+]"
- ottoman_iskodra_vilayet_870_yes:0 "\n§Y[870.GetName]§!:[TUR_albanian_population_870]"
- ottoman_iskodra_vilayet_44_yes:0 "\n§Y[44.GetName]§!:[TUR_albanian_population_44]"
+ ottoman_iskodra_vilayet_870_yes:0 "\n§Y[870.GetName]§!:[TUR_albanian_population_870][TUR_autonomy_870]"
+ ottoman_iskodra_vilayet_44_yes:0 "\n§Y[44.GetName]§!:[TUR_albanian_population_44][TUR_autonomy_44]"
 
  TUR_kosova_vilayet:0 "Kosova Vilayet"
  TUR_kosova_vilayet_desc:0 "[TUR_kosova_vilayet_desc]"
@@ -3026,11 +3026,11 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_kosova_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_kosova_stability_factor|=2%+]"
  ottoman_kosova_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_kosova_war_support_factor|=2%+]"
  ottoman_kosova_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_kosova_political_power_factor|=0%+]"
- ottoman_kosova_vilayet_847_yes:0 "\n§Y[847.GetName]§!:[TUR_south_slavic_population_847][TUR_albanian_population_847]"
- ottoman_kosova_vilayet_106_yes:0 "\n§Y[106.GetName]§!:[TUR_south_slavic_population_106][TUR_albanian_population_106][TUR_turkish_population_106]"
- ottoman_kosova_vilayet_848_yes:0 "\n§Y[848.GetName]§!:[TUR_south_slavic_population_848][TUR_albanian_population_848]"
- ottoman_kosova_vilayet_760_yes:0 "\n§Y[760.GetName]§!:[TUR_south_slavic_population_760][TUR_albanian_population_760]"
- ottoman_kosova_vilayet_761_yes:0 "\n§Y[761.GetName]§!:[TUR_south_slavic_population_761][TUR_albanian_population_761]"
+ ottoman_kosova_vilayet_847_yes:0 "\n§Y[847.GetName]§!:[TUR_south_slavic_population_847][TUR_albanian_population_847][TUR_autonomy_847]"
+ ottoman_kosova_vilayet_106_yes:0 "\n§Y[106.GetName]§!:[TUR_south_slavic_population_106][TUR_albanian_population_106][TUR_turkish_population_106][TUR_autonomy_106]"
+ ottoman_kosova_vilayet_848_yes:0 "\n§Y[848.GetName]§!:[TUR_south_slavic_population_848][TUR_albanian_population_848][TUR_autonomy_848]"
+ ottoman_kosova_vilayet_760_yes:0 "\n§Y[760.GetName]§!:[TUR_south_slavic_population_760][TUR_albanian_population_760][TUR_autonomy_760]"
+ ottoman_kosova_vilayet_761_yes:0 "\n§Y[761.GetName]§!:[TUR_south_slavic_population_761][TUR_albanian_population_761][TUR_autonomy_761]"
 
  TUR_montenegro_vilayet:0 "Montenegro Vilayet"
  TUR_montenegro_vilayet_desc:0 "[TUR_montenegro_vilayet_desc]"
@@ -3412,8 +3412,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_sivas_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_sivas_stability_factor|=2%+]"
  ottoman_sivas_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_sivas_war_support_factor|=2%+]"
  ottoman_sivas_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_sivas_political_power_factor|=0%+]"
- ottoman_sivas_vilayet_349_yes:0 "\n§Y[349.GetName]§!:[TUR_armenian_population_349][TUR_turkish_population_349]"
- ottoman_sivas_vilayet_348_yes:0 "\n§Y[348.GetName]§!:[TUR_armenian_population_348][TUR_greek_population_348][TUR_turkish_population_348]"
+ ottoman_sivas_vilayet_349_yes:0 "\n§Y[349.GetName]§!:[TUR_armenian_population_349][TUR_turkish_population_349][TUR_autonomy_349]"
+ ottoman_sivas_vilayet_348_yes:0 "\n§Y[348.GetName]§!:[TUR_armenian_population_348][TUR_greek_population_348][TUR_turkish_population_348][TUR_autonomy_348]"
 
  TUR_diyarbakir_vilayet:0 "Diyarbakır Vilayet"
  TUR_diyarbakir_vilayet_desc:0 "[TUR_diyarbakir_vilayet_desc]"
@@ -3427,7 +3427,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_diyarbakir_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_diyarbakir_stability_factor|=2%+]"
  ottoman_diyarbakir_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_diyarbakir_war_support_factor|=2%+]"
  ottoman_diyarbakir_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_diyarbakir_political_power_factor|=0%+]"
- ottoman_diyarbakir_vilayet_350_yes:0 "\n§Y[350.GetName]§!:[TUR_armenian_population_350][TUR_kurdish_population_350]"
+ ottoman_diyarbakir_vilayet_350_yes:0 "\n§Y[350.GetName]§!:[TUR_armenian_population_350][TUR_kurdish_population_350][TUR_autonomy_350]"
  ottoman_diyarbakir_vilayet_829_yes:0 "\n§Y[829.GetName]§!:[TUR_kurdish_population_829][TUR_assyrian_population_829]"
  ottoman_diyarbakir_vilayet_884_yes:0 "\n§Y[884.GetName]§!:[TUR_kurdish_population_884][TUR_assyrian_population_884]"
 
@@ -3443,9 +3443,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_erzurum_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_erzurum_stability_factor|=2%+]"
  ottoman_erzurum_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_erzurum_war_support_factor|=2%+]"
  ottoman_erzurum_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_erzurum_political_power_factor|=0%+]"
- ottoman_erzurum_vilayet_353_yes:0 "\n§Y[353.GetName]§!:[TUR_armenian_population_353][TUR_turkish_population_353]"
- ottoman_erzurum_vilayet_806_yes:0 "\n§Y[806.GetName]§!:[TUR_armenian_population_806][TUR_georgian_population_806][TUR_turkish_population_806]"
- ottoman_erzurum_vilayet_816_yes:0 "\n§Y[816.GetName]§!:[TUR_armenian_population_816][TUR_georgian_population_806][TUR_turkish_population_806]"
+ ottoman_erzurum_vilayet_353_yes:0 "\n§Y[353.GetName]§!:[TUR_armenian_population_353][TUR_turkish_population_353][TUR_autonomy_353]"
+ ottoman_erzurum_vilayet_806_yes:0 "\n§Y[806.GetName]§!:[TUR_armenian_population_806][TUR_kurdish_population_806][TUR_turkish_population_806][TUR_autonomy_806]"
+ ottoman_erzurum_vilayet_816_yes:0 "\n§Y[816.GetName]§!:[TUR_armenian_population_816][TUR_georgian_population_816][TUR_turkish_population_816][TUR_autonomy_816]"
  ottoman_erzurum_vilayet_855_yes:0 "\n§Y[855.GetName]§!:[TUR_georgian_population_855][TUR_turkish_population_806]"
 
  TUR_mamuret_ul_aziz_vilayet:0 "Mamuret-ul-Aziz Vilayet"
@@ -3460,7 +3460,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_mamuret_ul_aziz_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_mamuret_ul_aziz_stability_factor|=2%+]"
  ottoman_mamuret_ul_aziz_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_mamuret_ul_aziz_war_support_factor|=2%+]"
  ottoman_mamuret_ul_aziz_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_mamuret_ul_aziz_political_power_factor|=0%+]"
- ottoman_mamuret_ul_aziz_vilayet_881_yes:0 "\n§Y[881.GetName]§!:[TUR_armenian_population_881][TUR_kurdish_population_881]"
+ ottoman_mamuret_ul_aziz_vilayet_881_yes:0 "\n§Y[881.GetName]§!:[TUR_armenian_population_881][TUR_kurdish_population_881][TUR_autonomy_881]"
 
  TUR_bitlis_vilayet:0 "Bitlis Vilayet"
  TUR_bitlis_vilayet_desc:0 "[TUR_bitlis_vilayet_desc]"
@@ -3474,7 +3474,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_bitlis_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_bitlis_stability_factor|=2%+]"
  ottoman_bitlis_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_bitlis_war_support_factor|=2%+]"
  ottoman_bitlis_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_bitlis_political_power_factor|=0%+]"
- ottoman_bitlis_vilayet_1022_yes:0 "\n§Y[1022.GetName]§!:[TUR_armenian_population_1022][TUR_kurdish_population_1022]"
+ ottoman_bitlis_vilayet_1022_yes:0 "\n§Y[1022.GetName]§!:[TUR_armenian_population_1022][TUR_kurdish_population_1022][TUR_autonomy_1022]"
 
  TUR_van_vilayet:0 "Van Vilayet"
  TUR_van_vilayet_desc:0 "[TUR_van_vilayet_desc]"
@@ -3488,7 +3488,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_van_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_van_stability_factor|=2%+]"
  ottoman_van_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_van_war_support_factor|=2%+]"
  ottoman_van_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_van_political_power_factor|=0%+]"
- ottoman_van_vilayet_352_yes:0 "\n§Y[352.GetName]§!:[TUR_armenian_population_352][TUR_kurdish_population_352]"
+ ottoman_van_vilayet_352_yes:0 "\n§Y[352.GetName]§!:[TUR_armenian_population_352][TUR_kurdish_population_352][TUR_autonomy_352]"
  ottoman_van_vilayet_828_yes:0 "\n§Y[828.GetName]§!:[TUR_kurdish_population_828][TUR_assyrian_population_828]"
 
  TUR_adana_vilayet:0 "Adana Vilayet"
@@ -3560,9 +3560,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_yelizavetpol_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_yelizavetpol_stability_factor|=2%+]"
  ottoman_yelizavetpol_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_yelizavetpol_war_support_factor|=2%+]"
  ottoman_yelizavetpol_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_yelizavetpol_political_power_factor|=0%+]"
- ottoman_yelizavetpol_vilayet_818_yes:0 "\n§Y[818.GetName]§!:[TUR_armenian_population_818][TUR_azerbaijani_population_818]"
- ottoman_yelizavetpol_vilayet_823_yes:0 "\n§Y[823.GetName]§!:[TUR_armenian_population_823][TUR_azerbaijani_population_818]"
- ottoman_yelizavetpol_vilayet_938_yes:0 "\n§Y[938.GetName]§!:[TUR_armenian_population_938][TUR_azerbaijani_population_818]"
+ ottoman_yelizavetpol_vilayet_818_yes:0 "\n§Y[818.GetName]§!:[TUR_armenian_population_818][TUR_azerbaijani_population_818][TUR_autonomy_818]"
+ ottoman_yelizavetpol_vilayet_823_yes:0 "\n§Y[823.GetName]§!:[TUR_azerbaijani_population_823]"
+ ottoman_yelizavetpol_vilayet_938_yes:0 "\n§Y[938.GetName]§!:[TUR_armenian_population_938][TUR_azerbaijani_population_938]"
 
  TUR_yerivan_vilayet:0 "Yerivan Vilayet"
  TUR_yerivan_vilayet_desc:0 "[TUR_yerivan_vilayet_desc]"
@@ -3576,9 +3576,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_yerivan_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_yerivan_stability_factor|=2%+]"
  ottoman_yerivan_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_yerivan_war_support_factor|=2%+]"
  ottoman_yerivan_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_yerivan_political_power_factor|=0%+]"
- ottoman_yerivan_vilayet_230_yes:0 "\n§Y[230.GetName]§!:[TUR_armenian_population_230][TUR_azerbaijani_population_230]"
- ottoman_yerivan_vilayet_787_yes:0 "\n§Y[787.GetName]§!:[TUR_armenian_population_787][TUR_turkish_population_787]"
- ottoman_yerivan_vilayet_939_yes:0 "\n§Y[939.GetName]§!:[TUR_armenian_population_939][TUR_azerbaijani_population_939]"
+ ottoman_yerivan_vilayet_230_yes:0 "\n§Y[230.GetName]§!:[TUR_armenian_population_230][TUR_azerbaijani_population_230][TUR_autonomy_230]"
+ ottoman_yerivan_vilayet_787_yes:0 "\n§Y[787.GetName]§!:[TUR_armenian_population_787][TUR_turkish_population_787][TUR_autonomy_787]"
+ ottoman_yerivan_vilayet_939_yes:0 "\n§Y[939.GetName]§!:[TUR_armenian_population_939][TUR_azerbaijani_population_939][TUR_autonomy_939]"
 
  TUR_tabriz_vilayet:0 "Tabriz Vilayet"
  TUR_tabriz_vilayet_desc:0 "[TUR_tabriz_vilayet_desc]"
