--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4749,6 +4749,8 @@
  TUR_expand_the_armenian_reforms:0 "Expand the Armenian Reforms"
  TUR_expand_the_armenian_reforms_desc:0 "Yeniköy Accord was priorly intended to encapsulate all six majority Armenian vilayets. It's time to establish autonomy in those regions too."
  TUR_expand_the_armenian_reforms_tt:0 "\nIf controlled; §Y[806.GetName]§!, §Y[787.GetName]§!, §Y[230.GetName]§!, §Y[938.GetName]§! and §Y[939.GetName]§! will gain §YAutonomous Vilayet§!."
+ TUR_expand_the_armenian_reforms_tt2:0 "\nIf controlled; §Y[816.GetName]§! and §Y[818.GetName]§! will gain §YSemi-Autonomous Vilayet§!."
+ TUR_not_lift_the_armenian_reforms:0 "Has not selected Lift the Armenian Reforms"
  TUR_dogu_ekspresi:0 "Dogu Ekspresi"
  TUR_dogu_ekspresi_desc:0 "If we want to better connect to our allies, we better improve our railway connections with them. This way they can enforce troops into our frontlines."
  TUR_adriatic_invasion:0 "Adriatic Invasion"
