--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3680,7 +3680,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_mosul_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_mosul_war_support_factor|=2%+]"
  ottoman_mosul_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_mosul_political_power_factor|=0%+]"
  ottoman_mosul_vilayet_676_yes:0 "\n§Y[676.GetName]§!:[TUR_arab_population_676][TUR_kurdish_population_676]"
- ottoman_mosul_vilayet_879_yes:0 "\n§Y[879.GetName]§!:[TUR_kurdish_population_879]"
+ ottoman_mosul_vilayet_879_yes:0 "\n§Y[879.GetName]§!:[TUR_kurdish_population_879][TUR_assyrian_population_879]"
  ottoman_mosul_vilayet_883_yes:0 "\n§Y[883.GetName]§!:[TUR_arab_population_883][TUR_kurdish_population_883]"
 
  TUR_beirut_vilayet:0 "Beirut Vilayet"
@@ -4847,6 +4847,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_assyrian_population_829_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_829_assyrian_population_stability_factor|=2%+]"
  TUR_assyrian_population_829_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_829_assyrian_population_war_support_factor|=2%+]"
  TUR_assyrian_population_829_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_829_assyrian_population_war_support_factor|=0%+]"
+ TUR_assyrian_population_879_yes:0 "\n£ww1_flag_KUR  §Yassyrian Minority§![TUR_assyrian_population_879_stability_factor][TUR_assyrian_population_879_war_support_factor][TUR_assyrian_population_879_political_power_factor]"
+ TUR_assyrian_population_879_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_879_assyrian_population_stability_factor|=2%+]"
+ TUR_assyrian_population_879_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_879_assyrian_population_war_support_factor|=2%+]"
+ TUR_assyrian_population_879_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_879_assyrian_population_war_support_factor|=0%+]"
  TUR_assyrian_population_884_yes:0 "\n£ww1_flag_ASY  §YAssyrian Minority§![TUR_assyrian_population_884_stability_factor][TUR_assyrian_population_884_war_support_factor][TUR_assyrian_population_884_political_power_factor]"
  TUR_assyrian_population_884_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_884_assyrian_population_stability_factor|=2%+]"
  TUR_assyrian_population_884_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_884_assyrian_population_war_support_factor|=2%+]"
