macedonian struggle fix

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4620,12 +4620,11 @@
  TUR_defense_of_trablusgarp_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£supply_texticon  Local Supplies: §G+10%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
  TUR_law_on_churches:0 "Law on Churches"
  TUR_law_on_churches_desc:0 "Under the Millet system, all rumelian Orthodox Christians were dependent on the Greek Patriarchate for religious matters. Yet this law is widely unpopular among our Bulgarian population. By separating Bulgarian churches and schools from the Greek religious jurisdiction, we can settle ethnic tensions and struggles in the Macedonian region of our empire."
- TUR_law_on_churches_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\nDivision Attrition: §G-10.0%§!\n£compliance_gain_texticon  Compliance Growth Speed: §G+15%§!\n\n"
- TUR_law_on_churches_tt2:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£compliance_gain_texticon  Compliance Growth Speed: §G+15%§!\n\n"
- TUR_law_on_churches_tt3:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! by\n£compliance_gain_texticon  Compliance Growth Speed: §G+15%§!\n\n"
+ TUR_law_on_churches_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\nDivision Attrition: §G-5.0%§!\n\n"
+ TUR_law_on_churches_tt2:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! by\n£compliance_gain_texticon  Compliance Growth Speed: §G+15%§!\n\n"
  TUR_ottoman_law_on_church:0 "Ottoman Law on Church"
  TUR_ottoman_law_on_church_2:0 "Ottoman Law on Church"
- TUR_law_on_churches_tt4:0 "Unlocks £decision_icon_small  §YEstablish Order in Macedonia§! Decisions.\nUnlocks £decision_icon_small  §YIntegrate Macedonia§! Decisions.\n"
+ TUR_law_on_churches_tt3:0 "Unlocks £decision_icon_small  §YEstablish Order in Macedonia§! Decisions.\nUnlocks £decision_icon_small  §YIntegrate Macedonia§! Decisions.\n"
  TUR_increase_taxes_on_albanians:0 "Increase Taxes on Albanians"
  TUR_increase_taxes_on_albanians_desc:0 "Albanians have long been an exception to our taxation policies due to their religion. Yet under the new centralization policies of our empire, no reigious category shall be an exception to taxation. Though it'll be unpopular among Albanians, and strengthen their resistance, centralization is needed for the future of our empire."
  TUR_increase_taxes_on_albanians_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
