--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5233,13 +5233,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_truce_with_asir_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-80%§!\n"
  TUR_establish_order_in_macedonia:0 "Esrablish Order in [FROM.GetName]"
  TUR_establish_order_in_macedonia_desc:0 "[FROM.GetName] in the Macedonian region has been experiencing violence among Greek, Bulgarian and Turkish residents. By deploying the army in the region, we can combat violence and establish order."
- TUR_establish_order_in_macedonia_tt:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n"
- TUR_establish_order_in_macedonia_tt2:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£attrition_texticon  Division Attrition: §G-30.0%§!\n"
- TUR_establish_order_in_macedonia_tt3:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£attrition_texticon  Division Attrition: §G-40.0%§!\n"
- TUR_establish_order_in_macedonia_tt4:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£attrition_texticon  Division Attrition: §G-50.0%§!\n"
+ TUR_establish_order_in_macedonia_tt:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\nModify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\n\n"
+ TUR_establish_order_in_macedonia_tt2:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n\n"
  TUR_integrate_macedonia:0 "Integrate [FROM.GetName]"
  TUR_integrate_macedonia_desc:0 "Macedonia's importance for the empire combined with the local Turkish population makes it a real possibility for these vilayets to become a core part of our empire. Through increased opinion with locals, we can successfully integrate the region."
- TUR_integrate_macedonia_tt:0 "£attrition_texticon  Division Attrition value for [TUR_get_state_minority] is §G0.0%§! or §Gless§!"
+ TUR_integrate_macedonia_tt1:0 "£attrition_texticon  Division Attrition value for £ww1_game_rule_flag_GRE  §YGreek Minority§! is §G0.0%§! or §Gless§!"
+ TUR_integrate_macedonia_tt2:0 "£attrition_texticon  Division Attrition value for £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! is §G0.0%§! or §Gless§!"
  TUR_tax_collection_in_albania:0 "Tax Collection in [FROM.GetName]"
  TUR_tax_collection_in_albania_desc:0 "Muslim Albanians in [FROM.GetName] have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
  TUR_tax_collection_in_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
