--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5226,11 +5226,13 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_conscription_in_karak:0 "Conscription in Karak"
  TUR_conscription_in_karak_desc:0 "Druze minority in our empire has been resisting our centralization efforts. As previous Druze rebellion has proven, has proven, we have to strengthen our grip by increasing conscription and tax collection."
  TUR_conscription_in_karak_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §R+20.0%§!\n"
- TUR_conscription_in_karak_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n£supply_texticon  Local Supplies: §G+5%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
+ TUR_conscription_in_karak_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n£supply_texticon  Local Supplies: §G+5%§!\n"
  TUR_conscription_in_karak_tt3:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §G-20.0%§!\n"
+ TUR_increase_damascus_centralization_5:0 "Modify §YCentralization§! of §YDamascus Vilayet§! by §G+5%§!"
  TUR_truce_with_asir:0 "Truce With Asir"
  TUR_truce_with_asir_desc:0 "A debate in the court over Sharia law reignited Al-Idrisi's rebellion. As foreign wars seem imminent, we may have to have truce with them."
  TUR_truce_with_asir_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-80%§!\n"
+ TUR_decrease_yemen_centralization_5:0 "Modify §YCentralization§! of §YYemen Vilayet§! by §R-5%§!"
  TUR_establish_order_in_macedonia:0 "Esrablish Order in [FROM.GetName]"
  TUR_establish_order_in_macedonia_desc:0 "[FROM.GetName] in the Macedonian region has been experiencing violence among Greek, Bulgarian and Turkish residents. By deploying the army in the region, we can combat violence and establish order."
  TUR_establish_order_in_macedonia_tt:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\nModify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\n\n"
@@ -5239,13 +5241,22 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_integrate_macedonia_desc:0 "Macedonia's importance for the empire combined with the local Turkish population makes it a real possibility for these vilayets to become a core part of our empire. Through increased opinion with locals, we can successfully integrate the region."
  TUR_integrate_macedonia_tt1:0 "£attrition_texticon  Division Attrition value for £ww1_game_rule_flag_GRE  §YGreek Minority§! is §G0.0%§! or §Gless§!"
  TUR_integrate_macedonia_tt2:0 "£attrition_texticon  Division Attrition value for £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! is §G0.0%§! or §Gless§!"
- TUR_tax_collection_in_albania:0 "Tax Collection in [FROM.GetName]"
- TUR_tax_collection_in_albania_desc:0 "Muslim Albanians in [FROM.GetName] have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
- TUR_tax_collection_in_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
- TUR_tax_collection_in_albania_tt2:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
- TUR_increased_albanian_conscriptions:0 "Increased Albanian Conscription"
- TUR_increased_albanian_conscriptions_desc:0 "Thanks to its Muslim population, Albania stands as a stronghold as Ottoman rule in the Western Balkans. Yet the region still remains rather away from our total reach. By increasing centralization and conscription, Albanian vilayets can become a part of yet another Ottoman province."
- TUR_increased_albanian_conscriptions_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
+ TUR_tax_collection_in_kosova:0 "Tax Collection in Kosova Vilayet"
+ TUR_tax_collection_in_kosova_desc:0 "Muslim Albanians in Kosova Vilayet have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
+ TUR_tax_collection_in_manastir:0 "Tax Collection in Manastır Vilayet"
+ TUR_tax_collection_in_manastir_desc:0 "Muslim Albanians in Manastır Vilayet have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
+ TUR_tax_collection_in_yanya:0 "Tax Collection in Yanya Vilayet"
+ TUR_tax_collection_in_yanya_desc:0 "Muslim Albanians in Yanya Vilayet have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
+ TUR_tax_collection_in_iskodra:0 "Tax Collection in İşkodra Vilayet"
+ TUR_tax_collection_in_iskodra_desc:0 "Muslim Albanians in İşkodra Vilayet have been enjoying tax exceptions for quite a time now. As a part of our centralization policies, no minority, neither religion, shall be an exception to taxation."
+ TUR_tax_collection_in_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n"
+ TUR_centralize_albania_decision:0 "Centralize [FROM.GetName]"
+ TUR_centralize_albania_decision_desc:0 "Thanks to its Muslim population, Albania stands as a stronghold as Ottoman rule in the Western Balkans. Yet the region still remains rather away from our total reach. By increasing centralization , Albanian vilayets can become a part of yet another Ottoman province."
+ TUR_centralize_albania_decision_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n"
+ TUR_increase_kosova_centralization_2:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+2%§!"
+ TUR_increase_manastir_centralization_2:0 "Modify §YCentralization§! of §YManastır Vilayet§! by §G+2%§!"
+ TUR_increase_yanya_centralization_2:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+2%§!"
+ TUR_increase_iskodra_centralization_2:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+2%§!"
  TUR_decision_cost_300_infantry_equipment:0 "£infantry_equipment_text_icon §Y300§!"
  TUR_decision_cost_300_infantry_equipment_blocked:0 "£infantry_equipment_text_icon §R300§!"
  TUR_improve_albanian_garrisons_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n"
