--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4617,7 +4617,8 @@
  TUR_ratify_the_treaty_of_daan_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\nDivision Attrition: §G-70.0%§!\n\n"
  TUR_defense_of_trablusgarp:0 "Defense of Trablusgarp"
  TUR_defense_of_trablusgarp_desc:0 "Our last remaining territories in Africa, Trablusgarp, are being targeted by European colonial powers. While the region is sceptic to our rule, they're more than happy to side with us against the imperialists. By rallying the local population, we can increase our chances to defend Trablusgarp."
- TUR_defense_of_trablusgarp_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£supply_texticon  Local Supplies: §G+10%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
+ TUR_defense_of_trablusgarp_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£supply_texticon  Local Supplies: §G+10%§!\n\n"
+ TUR_increase_trablusgarp_centralization_10:0 "Modify §YCentralization§! of §YTrablusgarp Vilayet§! by §G+10%§!"
  TUR_law_on_churches:0 "Law on Churches"
  TUR_law_on_churches_desc:0 "Under the Millet system, all rumelian Orthodox Christians were dependent on the Greek Patriarchate for religious matters. Yet this law is widely unpopular among our Bulgarian population. By separating Bulgarian churches and schools from the Greek religious jurisdiction, we can settle ethnic tensions and struggles in the Macedonian region of our empire."
  TUR_law_on_churches_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\nDivision Attrition: §G-5.0%§!\n\n"
@@ -4627,15 +4628,20 @@
  TUR_law_on_churches_tt3:0 "Unlocks £decision_icon_small  §YEstablish Order in Macedonia§! Decisions.\nUnlocks £decision_icon_small  §YIntegrate Macedonia§! Decisions.\n"
  TUR_increase_taxes_on_albanians:0 "Increase Taxes on Albanians"
  TUR_increase_taxes_on_albanians_desc:0 "Albanians have long been an exception to our taxation policies due to their religion. Yet under the new centralization policies of our empire, no reigious category shall be an exception to taxation. Though it'll be unpopular among Albanians, and strengthen their resistance, centralization is needed for the future of our empire."
- TUR_increase_taxes_on_albanians_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
- TUR_increase_taxes_on_albanians_tt2:0 "Unlocks £decision_icon_small  §YTax Collection in Albania§! Decisions."
+ TUR_increase_taxes_on_albanians_tt:0 "Unlocks £decision_icon_small  §YTax Collection in Albania§! Decisions."
+ TUR_increase_kosova_centralization_10:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+10%§!"
+ TUR_increase_manastir_centralization_5:0 "Modify §YCentralization§! of §YManastır Vilayet§! by §G+10%§!"
+ TUR_increase_yanya_centralization_10:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+10%§!"
+ TUR_increase_iskodra_centralization_10:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+10%§!"
  TUR_approve_grece_memorandum:0 "Approve Greçë Memorandum"
  TUR_approve_grece_memorandum_desc:0 "Twelve requests jointly written by Albanian representatives, Greçë Memorandum is a memorandum including several demands for the establishment of an autonomous Albanian province in the empire. Though our previous governments have tries to minimize its significance, Perhaps it's best to comply with the Demands and give Autonomy to Albanians."
  TUR_approve_grece_memorandum_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §G-30%§!\n\n"
  TUR_centralize_albania:0 "Centralize Albania"
  TUR_centralize_albania_desc:0 "Recent rebellions in Albania back to back has became a large topic on its own. Though many in our government been proposing to give Albanians their own autonomous vilayet due to the rebellions that took the level of a crisis, most in our government oppose this. Centralization of Albania is necessary if we are to continue our hold in those lands."
- TUR_centralize_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_gain_texticon  Resistance Growth Speed: §G-10%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
- TUR_centralize_albania_tt2:0 "Unlocks £decision_icon_small  §YIncreased Albanian Conscriptions§! Decisions.\nUnlocks £decision_icon_small  §YImprove Albanian Garrisons§! Decisions.\n"
+ TUR_centralize_albania_tt:0 "Unlocks £decision_icon_small  §YCentralize Albania§! Decisions.\nUnlocks £decision_icon_small  §YImprove Albanian Garrisons§! Decisions.\n"
+ TUR_increase_kosova_centralization_5:0 "Modify §YCentralization§! of §YKosova Vilayet§! by §G+5%§!"
+ TUR_increase_yanya_centralization_5:0 "Modify §YCentralization§! of §YYanya Vilayet§! by §G+5%§!"
+ TUR_increase_iskodra_centralization_5:0 "Modify §YCentralization§! of §Yİşkodra Vilayet§! by §G+5%§!"
  TUR_albanian_vilayet:0 "Albanian Vilayet"
  TUR_albanian_vilayet_desc:0 "Recent rebellions in Albania has proven that we need to introduce serious reforms in the region. As some within our government proposes, we should give autonomy to Albanians. With the creation of an Albanian vilayet, where Albanian language, cultures and customs will be permitted, we can bring an end to these long lasting revolts that has been plaguing the region."
  TUR_albanian_vilayet_tt1:0 "Replace §Y£ww1_flag_ALB  Albanian Minority§! with £ww1_game_rule_flag_YUG §YSouth Slavic Minority§!\nEffective change:\n£manpower_texticon  Recruitable Population: §G+20.00%§!\n£political_violence_texticon  Resistance Target: §G-§![?847.TUR_ottoman_resistance_target|0%+]\n£political_violence_gain_texticon  Resistance Growth Speed: §G-§![?847.TUR_ottoman_resistance_growth|0%+]\n\n"
@@ -4981,13 +4987,13 @@
  TUR_clamp_down_on_arab_dissent:0 "Clamp Down on Arab Dissent"
  TUR_clamp_down_on_arab_dissent_desc:0 "Our new centralist, integrationist and assimilationist policies has proven to be quite unpopular by our Arab population. As these lands remain as some of the last bits of our empire, we cannot afford to lose them. We'll do anything, to anyone, to retain the control of these lands."
  TUR_clamp_down_on_arab_dissent_tt:0 "Unlocks £decision_icon_small  §YSurpress Arab Dissent§! Decisions.\nUnlocks £decision_icon_small  §YBan Arab Newspapers§! Decisions.\nUnlocks £decision_icon_small  §YForced Labor in Middle East§! Decisions.\nUnlocks £decision_icon_small  §YRecruit Prisoner Recruits in Middle East§! Decisions.\n"
- has_south_slavic_minority:0 "Has £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!"
- has_greek_minority:0 "Has £ww1_game_rule_flag_GRE  §YGreek Minority§!"
- has_armenian_minority:0 "Has £ww1_flag_ARM  §YArmenian Minority§!"
- has_assyrian_minority:0 "Has £ww1_flag_ASY  §YAssyrian Minority§!"
- has_kurdish_minority:0 "Has £ww1_flag_KUR  §YKurdish Minority§!"
- has_arab_minority:0 "Has £ww1_flag_ARB  §YArab Minority§!"
- has_albanian_minority:0 "Has £ww1_flag_ALB  §YAlbanian Minority§!"
+ has_south_slavic_minority:0 "State has £ww1_game_rule_flag_YUG  South Slavic Minority"
+ has_greek_minority:0 "State has £ww1_game_rule_flag_GRE  Greek Minority"
+ has_armenian_minority:0 "State has £ww1_flag_ARM  Armenian Minority"
+ has_assyrian_minority:0 "State has £ww1_flag_ASY  Assyrian Minority"
+ has_kurdish_minority:0 "State has £ww1_flag_KUR  Kurdish Minority"
+ has_arab_minority:0 "State has £ww1_flag_ARB  Arab Minority"
+ has_albanian_minority:0 "State has £ww1_flag_ALB  Albanian Minority"
  TUR_three_pasha_government:0 "Three Pasha Government"
  TUR_three_pasha_government_desc:0 "İttihat ve Terakki Fırkası has been ruling the country as a shadow organization, a state within state. While many government officials were independent candidates, the party has always been involved with government matters, even if their members didn't have seats in it. Yet recent developments both in the empire and the party showed that the party is ready to take full command of the country. As the party prepares to take full control of the state; its most influential three members, Talat, Enver and Cemâl, is being nominated to divide their powers between each other and rule the country as a triumvirate."
  TUR_mobilize_the_civilian_population:0 "Mobilize the Civilian Population"
